--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-@media screen and (max-width: 980px) {
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
@@ -216,3 +215,18 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@media screen and (max-width: 980px) {
+body {
+
+}
+
+@media screen and (max-width: 768px) {
+  body {
+
+}
+
+@media screen and (max-width: 640px) {
+  body {
+  
+{
